@@ -284,6 +284,8 @@ documents those changes that are of interest to users and admins.
     processes (e.g. "/proc/bus").
  -- Fix documentation bug for slurmdbd.conf
  -- Fix slurmctld to update qos preempt list without restart.
+ -- Fix bug in select/cons_res that in some cases would prevent a preempting job
+    from using of resources already allocated to a preemptable running job.
 
 * Changes in SLURM 2.1.8
 ========================
